--- a/app/templates/servicedesk/pdf/ticket_pdf_template.html
+++ b/app/templates/servicedesk/pdf/ticket_pdf_template.html
@@ -84,7 +84,7 @@
 </head>
 <body>
     <div id="header_content" class="header">
-        {{ company_name|default:"Sua Empresa" }} - Relatório de Ticket
+        {{ company_name|default:"mod64bits" }} - Relatório de Ticket
     </div>
     <div id="footer_content" class="footer">
         Página <pdf:pagenumber /> de <pdf:pagecount />
