--- a/app/templates/servicedesk/pdf/work_order_pdf_template.html
+++ b/app/templates/servicedesk/pdf/work_order_pdf_template.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <div id="header_content" class="header">
-        {{ company_name|default:"Sua Empresa" }} - Relatório de Ordem de Serviço
+        {{ company_name|default:"mod64bits" }} - Relatório de Ordem de Serviço
     </div>
     <div id="footer_content" class="footer">
         Página <pdf:pagenumber /> de <pdf:pagecount />
