--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}Service Desk App{% endblock %} | AdminLTE 3</title>
+  <title>{% block title %}Service Desk App{% endblock %} | mod64bits</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="{% static 'adminlte/plugins/fontawesome-free/css/all.min.css' %}">
@@ -80,7 +80,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <a href="{% if user.is_authenticated %}{% url 'dashboard:dashboard_page' %}{% else %}{% url 'login' %}{% endif %}" class="brand-link">
       <img src="{% static 'adminlte/dist/img/AdminLTELogo.png' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-      <span class="brand-text font-weight-light">Service Desk</span>
+      <span class="brand-text font-weight-light">MOD Service</span>
     </a>
 
     <div class="sidebar">
