--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -208,9 +208,9 @@
     </div>
   <footer class="main-footer">
     <div class="float-right d-none d-sm-inline">
-      Anything you want
+     mod64bits@gmail.com
     </div>
-    <strong>Copyright &copy; {% now "Y" %} <a href="#">Sua Empresa</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; {% now "Y" %} <a href="#">mod64bits</a>.</strong> All rights reserved.
   </footer>
 </div>
 <div class="modal fade" id="ajaxModal" tabindex="-1" role="dialog" aria-labelledby="ajaxModalLabel" aria-hidden="true">
