--- a/app/templates/dashboard/dashboard.html
+++ b/app/templates/dashboard/dashboard.html
@@ -185,8 +185,8 @@
                         {% for orcamento in recent_pending_quotes %}
                         <tr>
                             <td>#{{ orcamento.id }}</td>
-                            <td><a href="{% url 'quotes:orcamento_detail' orcamento.pk %}">{{ orcamento.cliente.nome|truncatechars:40 }}</a></td>
-                            <td>{{ orcamento.get_status_display }}</td>
+                            <td><a href="{% url 'quotes:orcamento_detail' orcamento.pk %}">{{ orcamento.cliente.nome|truncatechars:40|default:"-" }}</a></td>
+                            <td>{{ orcamento.get_status_display|default:"-" }}</td>
                             <td>R$ {{ orcamento.valor_total_orcamento|floatformat:2 }}</td>
                             <td>
                                 <a href="{% url 'quotes:orcamento_detail' orcamento.pk %}" class="btn btn-xs btn-outline-info" title="Ver Detalhes"><i class="fas fa-eye"></i></a>
